setup base http handlers
